--- a/css/styl/style_styl.styl
+++ b/css/styl/style_styl.styl
@@ -1,5 +1,6 @@
 @import 'jeet/framework'
 @import 'jeet/goodies'
+* { transition: all .25s ease-in; }
 .cf
 	cf()
 .container
@@ -42,9 +43,8 @@
 				span(8,91)
 		> input
 			span(12, 91)
-			width get(12,91) !important
-			max-height 100%
-			padding 7px 2px
+			// width get(12,91) !important
+			padding 0px 2px
 			border-bottom none
 			border-left none
 			border-top none
